--- a/front_app/src/pages/singup/singup.css
+++ b/front_app/src/pages/singup/singup.css
@@ -1,7 +1,7 @@
-/* Estilos generales */
+
 body {
     font-family: 'Inter', sans-serif;
-    background-color: #161a1b;  /* Fondo oscuro */
+    background-color: #161a1b; 
     margin: 0;
     padding: 0;
     display: flex;
@@ -11,10 +11,9 @@ body {
     color: white;
 }
 
-/* Estilo general para el formulario de registro */
 #signup-form {
-    background-color: rgba(255, 255, 255, 0.1);  /* Fondo translúcido */
-    backdrop-filter: blur(10px);  /* Efecto de desenfoque */
+    background-color: rgba(255, 255, 255, 0.1);  
+    backdrop-filter: blur(10px); 
     padding: 2rem;
     border-radius: 1.5rem;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -23,14 +22,12 @@ body {
     margin: 0 auto;
 }
 
-/* Título del formulario */
 #signup-form h2 {
     font-size: 2rem;
     text-align: center;
     font-weight: bold;
 }
 
-/* Estilo para cada campo de formulario */
 #signup-form input {
     width: 95%;
     padding: 1rem;
@@ -56,11 +53,10 @@ body {
     color: white;
 }
 
-/* Botón de enviar (Crear Usuario) */
 button[type="submit"] {
     width: 100%;
     padding: 1rem 2rem;
-    background-color: #34d399;  /* Verde claro */
+    background-color: #34d399; 
     color: white;
     border: none;
     border-radius: 9999px;
@@ -71,11 +67,11 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #2ca674;  /* Verde más oscuro */
+    background-color: #2ca674;
     transform: scale(1.05);
 }
 
-/* Estilo del enlace para Login */
+
 #gotoLoginLink {
     font-weight: bold;
     color: white;
@@ -85,11 +81,11 @@ button[type="submit"]:hover {
 }
 
 #gotoLoginLink:hover {
-    color: #34d399;  /* Verde claro */
+    color: #34d399;  
     
 }
 
-/* Botón para regresar */
+
 #backFromSignupButton {
     width: 100%;
     padding: 1rem 2rem;
@@ -108,15 +104,13 @@ button[type="submit"]:hover {
     transform: scale(1.05);
 }
 
-/* Mensajes de estado */
 #signupStatusMessage {
     font-size: 0.9rem;
     font-weight: bold;
-    color: #ff8c00;  /* Naranja para mensajes de error o advertencia */
+    color: #ff8c00;  
     margin-top: 1rem;
 }
 
-/* Estilos responsive */
 @media screen and (max-width: 640px) {
     #signup-form {
         padding: 1.5rem;
