--- a/front_app/src/index.css
+++ b/front_app/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.content-card {
+  background-color: #1E2A22;
+  border-radius: 24px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+  padding: 16px;
+  margin: 20px;
+  width: 100%;
+  max-width: 650px;
+  display: flex;
+  flex-direction: column;
+}
