--- a/front_app/src/pages/chat/chatPage.css
+++ b/front_app/src/pages/chat/chatPage.css
@@ -1,18 +1,23 @@
-.chat-page-container {
-    background-color: #1a201a;
-    color: white;
-    min-height: 100vh;
+.chat-page-content {
+    background-color: #ff0000;
+    min-width: 95vh;
+    max-width: 650px;
+    border-radius: 24px;
+    padding: 16px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+    margin: 20px;
+    min-height: 70vh;
     display: flex;
-    justify-content: center;
-    font-family: Arial, sans-serif;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .chat-page-content {
+    background-color: #1E2A22;
     width: 100%;
-    max-width: 500px;
-    background-color: #1e2a1e;
-    border-radius: 20px;
+    max-width: 480px;
+    border-radius: 24px;
+    padding: 16px;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
     margin: 20px;
-    padding: 10px 0;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
